# jupyter-notebook

./: .gitignore  Playground.ipynb  README.md  pyproject.toml  run.sh
.ipynb_checkpoints/: Playground-checkpoint.ipynb  pyproject-checkpoint.toml
