[project]
name = "jupyter-playground"
version = "0.1.0"
description = "Run Jupyter notebook locally"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.9.4",
    "numpy==1.23",
    "pyqt6>=6.10.0",
    "scikit-learn==1.6.1",
    "torch>=2.5.0",
    "torchvision>=0.23"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
