[project]
name = "jupyter-playground"
version = "0.1.0"
description = "Run Jupyter notebook locally"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.9.4",
    "numpy>=2.3",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.7",
    "torch>=2.9.1",
    "torchvision>=0.24.1"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
